Fixed bug #29015 (Incorrect behavior of member vars(non string ones)-numeric mem vars und others)